# GoogleSolutionsChallenge

./: .env.example  .gitignore  Dockerfile  README.md  deepseek_markdown_20260404_04b30e.md  docker-compose.yml  fred-output.txt  package-lock.json  pyproject.toml  rename.py  requirements.txt  script.txt  search-out.txt  search.py
.agent/: agent.md
.agent/workflows/: ingest.md  serve.md  setup.md  test.md
api/: __init__.py  auth.py  constants.py  deps.py  main.py  schemas.py
api/routes/: auth.py  charts.py  chatbot.py  fred.py  geojson.py  markets.py  metrics.py  watchlist.py
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/css/: style.css
dashboard/js/: api.js  app.js  controls.js  map.js
dashboard/src/: App.css  App.tsx  main.tsx
db/: __init__.py  connection.py  models.py
db/migrations/: env.py
docs/: agent_handbook.md  project_stitch_guide.md  roadmap.md
etl/: __init__.py  merge.py  normalize.py  quality.py
ingestion/: __init__.py  census_acs.py  config.py  fred.py  google_trends.py  hud.py  permits.py  runner.py  zillow.py
scratch/: check_fred_debug.py
scripts/: deploy.sh  init_db.py  update_rent_series.py
stitch_austin_market_intelligence/: projectr_analytics_design_document.html
stitch_austin_market_intelligence/geospatial_dashboard/: code.html
stitch_austin_market_intelligence/job_growth_analytics/: code.html
stitch_austin_market_intelligence/login_authentication/: code.html
tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_etl.py  test_ingestion.py  test_integration.py
(+43 files in other folders)
