[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "projectr-analytics"
version = "0.1.0"
description = "Real-estate data ingestion engine & geospatial dashboard"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
